Change CSS max height for review form, fix button being cut off

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -303,7 +303,7 @@
   opacity: 1;
   overflow: hidden;
   height: auto;
-  max-height: 500px;
+  max-height: 600px;
   max-width: 780px;
   min-width: 550px;
   background-color: white;
